{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 118,
  "lineage": "17aa75fc-8c45-96c2-525e-9fc8b95dcff4",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038daaf2259cb10cf",
            "domain": "vpc",
            "id": "eipalloc-038daaf2259cb10cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-89-102.compute-1.amazonaws.com",
            "public_ip": "3.212.89.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0876967a20c40b385",
            "domain": "vpc",
            "id": "eipalloc-0876967a20c40b385",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-236-72-178.compute-1.amazonaws.com",
            "public_ip": "54.236.72.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ff3804b109e1f0f",
            "domain": "vpc",
            "id": "eipalloc-07ff3804b109e1f0f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-4-209-94.compute-1.amazonaws.com",
            "public_ip": "52.4.209.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:internet-gateway/igw-08eef5260319d4f16",
            "id": "igw-08eef5260319d4f16",
            "owner_id": "766819176966",
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-IGW"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-IGW"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038daaf2259cb10cf",
            "connectivity_type": "public",
            "id": "nat-03681429316d5a2a4",
            "network_interface_id": "eni-0dab365a588da5ebf",
            "private_ip": "172.21.20.50",
            "public_ip": "3.212.89.102",
            "subnet_id": "subnet-0e5ca1af2eee6a769",
            "tags": {
              "Name": "log-archive-virginia-vpc-nat-gateway-az1"
            },
            "tags_all": {
              "Name": "log-archive-virginia-vpc-nat-gateway-az1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw_eip",
            "module.vpc.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0876967a20c40b385",
            "connectivity_type": "public",
            "id": "nat-0e2aaf09fc7d93b8d",
            "network_interface_id": "eni-07e82db6d7ff40769",
            "private_ip": "172.21.47.72",
            "public_ip": "54.236.72.178",
            "subnet_id": "subnet-0ba3d0ec65ca60be3",
            "tags": {
              "Name": "log-archive-virginia-vpc-nat-gateway-az2"
            },
            "tags_all": {
              "Name": "log-archive-virginia-vpc-nat-gateway-az2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw_eip",
            "module.vpc.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ff3804b109e1f0f",
            "connectivity_type": "public",
            "id": "nat-0ac83ddbe03ae8ad4",
            "network_interface_id": "eni-0d4c07a1f35e10cfe",
            "private_ip": "172.21.62.143",
            "public_ip": "52.4.209.94",
            "subnet_id": "subnet-0380e0e28205962f9",
            "tags": {
              "Name": "log-archive-virginia-vpc-nat-gateway-az3"
            },
            "tags_all": {
              "Name": "log-archive-virginia-vpc-nat-gateway-az3"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw_eip",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:route-table/rtb-08b5df5d0b25d5f58",
            "id": "rtb-08b5df5d0b25d5f58",
            "owner_id": "766819176966",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:route-table/rtb-030d8f32b0798d4e8",
            "id": "rtb-030d8f32b0798d4e8",
            "owner_id": "766819176966",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:route-table/rtb-0df94cff015055254",
            "id": "rtb-0df94cff015055254",
            "owner_id": "766819176966",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:route-table/rtb-08797794fccf5ea40",
            "id": "rtb-08797794fccf5ea40",
            "owner_id": "766819176966",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eef5260319d4f16",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:route-table/rtb-086799fc1c9b868b8",
            "id": "rtb-086799fc1c9b868b8",
            "owner_id": "766819176966",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eef5260319d4f16",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:route-table/rtb-0f176d843645f2af6",
            "id": "rtb-0f176d843645f2af6",
            "owner_id": "766819176966",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eef5260319d4f16",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associaton-private-subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bf3a067a5907b2",
            "route_table_id": "rtb-08b5df5d0b25d5f58",
            "subnet_id": "subnet-0f7e4074c44d9a01d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.route_table_private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022db6df6e55cd078",
            "route_table_id": "rtb-030d8f32b0798d4e8",
            "subnet_id": "subnet-0059fa096305c842f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfee0c23a14ea809",
            "route_table_id": "rtb-0df94cff015055254",
            "subnet_id": "subnet-02def62f67a937a71"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.route_table_private",
            "module.vpc.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associaton-public-subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0277e1c5615721563",
            "route_table_id": "rtb-08797794fccf5ea40",
            "subnet_id": "subnet-0e5ca1af2eee6a769"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc7296f9620b74f6",
            "route_table_id": "rtb-086799fc1c9b868b8",
            "subnet_id": "subnet-0ba3d0ec65ca60be3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04499f6e62baa1a97",
            "route_table_id": "rtb-0f176d843645f2af6",
            "subnet_id": "subnet-0380e0e28205962f9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:subnet/subnet-0f7e4074c44d9a01d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.64.0/18",
            "id": "subnet-0f7e4074c44d9a01d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766819176966",
            "tags": {
              "Name": "log-archive-private-subnet-az1"
            },
            "tags_all": {
              "Name": "log-archive-private-subnet-az1"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:subnet/subnet-0059fa096305c842f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.128.0/18",
            "id": "subnet-0059fa096305c842f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766819176966",
            "tags": {
              "Name": "log-archive-private-subnet-az2"
            },
            "tags_all": {
              "Name": "log-archive-private-subnet-az2"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:subnet/subnet-02def62f67a937a71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.21.192.0/18",
            "id": "subnet-02def62f67a937a71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766819176966",
            "tags": {
              "Name": "log-archive-private-subnet-az3"
            },
            "tags_all": {
              "Name": "log-archive-private-subnet-az3"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:subnet/subnet-0e5ca1af2eee6a769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.16.0/20",
            "id": "subnet-0e5ca1af2eee6a769",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766819176966",
            "tags": {
              "Name": "log-archive-public-subnet-az1"
            },
            "tags_all": {
              "Name": "log-archive-public-subnet-az1"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:subnet/subnet-0ba3d0ec65ca60be3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.32.0/20",
            "id": "subnet-0ba3d0ec65ca60be3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766819176966",
            "tags": {
              "Name": "log-archive-public-subnet-az2"
            },
            "tags_all": {
              "Name": "log-archive-public-subnet-az2"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:subnet/subnet-0380e0e28205962f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.21.48.0/20",
            "id": "subnet-0380e0e28205962f9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766819176966",
            "tags": {
              "Name": "log-archive-public-subnet-az3"
            },
            "tags_all": {
              "Name": "log-archive-public-subnet-az3"
            },
            "vpc_id": "vpc-071f91ad6c41edd2d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766819176966:vpc/vpc-071f91ad6c41edd2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-00510e660aef51d66",
            "default_route_table_id": "rtb-05a935245e0853228",
            "default_security_group_id": "sg-0371743c8f69050e6",
            "dhcp_options_id": "dopt-b97e45c2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-071f91ad6c41edd2d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05a935245e0853228",
            "owner_id": "766819176966",
            "tags": {
              "Environment": "prod",
              "Name": "log-archive-virginia-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "log-archive-virginia-vpc"
            }
          }
        }
      ]
    }
  ]
}